set top and bottom whitespace to prevent sticky header and footer from overlapping content

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -47,6 +47,11 @@ th {
   animation: bg-gradient 30s ease infinite;
   -moz-animation: bg-gradient 30s ease infinite;
   -webkit-animation: bg-gradient 30s ease infinite;
+  padding-bottom: 80px;
+}
+
+.whitespace-bottom {
+  height: 50px;
 }
 
 @keyframes bg-gradient {
