--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -29,7 +29,3 @@ nav ul li:hover {
 .nav-name:hover {
   background-color: black;
 }
-
-.whitespace-bottom {
-  height: 50px;
-}
